error on Registro